# rcr

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  test.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/serve/: mod.rs  redis_serve.rs
src-tauri/src/utils/: cache_util.rs  cache_util_1.rs  creat_folder.rs  mod.rs  redis_util.rs  response.rs
src/index/: index.vue  index1.vue
src/router/: index.ts
