[package]
name = "rcr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rcr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.28.1", features = ["r2d2", "cluster", "async-std-comp"] }
tokio = { version = "1.40.0", features = ["full"] }
cached = "0.54.0"
env_logger = "0.11.5"
fast_log = "1.7.4"
log = "0.4.22"
tauri-plugin-os = "2"
once_cell = "1.20.2"
regex = "1.11.1"
rust-crypto = "0.2.36"
r2d2 = "0.8.10"
tauri-plugin-fs = "2"
directories = "5.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
async-std = "1.13.0"



[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
